--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/styled-components": "^5.1.34",
+    "highlight.js": "^11.9.0",
+    "marked": "^13.0.0",
     "mobx": "^6.12.4",
     "mobx-react-lite": "^4.0.7",
     "react": "^18.3.1",
@@ -51,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/highlight.js": "^10.1.0",
     "@types/react-helmet": "^6.1.11"
   }
 }
